# itu-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  build.rs
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benches/: slant_path.rs
examples/: slant_path.rs
python/: Cargo.toml  README.md  pyproject.toml
python/python/itu_rs/: __init__.py  __init__.pyi  _data.py
python/src/: lib.rs
python/tests/: test_itu_rs.py
src/: lib.rs
tests/: python_parity.rs  smoke.rs
tools/: python_parity_error_boxplot.py
