[package]
name = "itu-rs"
version = "1.0.1"
edition = "2024"
description = "Rust implementation of selected ITU-R P-series atmospheric propagation models"
readme = "README.md"
documentation = "https://docs.rs/itu-rs"
license = "MIT"
keywords = ["itu-r", "propagation", "attenuation", "rf", "satellite"]
categories = ["science"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "NOTICE.md",
    "src/**",
    "benches/**",
    "examples/**",
    "tests/**",
]

[lib]
name = "itu_rs"

[dependencies]
ndarray = "0.17.2"
ndarray-npy = "0.10.0"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "slant_path"
harness = false
