[package]
name = "itu-rs"
version = "1.0.2"
edition = "2024"
build = "build.rs"
description = "Rust implementation of selected ITU-R P-series atmospheric propagation models"
readme = "README.md"
documentation = "https://docs.rs/itu-rs"
license = "MIT"
keywords = ["itu-r", "propagation", "attenuation", "rf", "satellite"]
categories = ["science"]
include = [
    "Cargo.toml",
    "build.rs",
    "README.md",
    "LICENSE",
    "NOTICE.md",
    "src/**",
    "benches/**",
    "examples/**",
    "tests/**",
]

[lib]
name = "itu_rs"

[features]
default = []
data = ["dep:sha2", "dep:ureq", "dep:zip"]

[dependencies]
ndarray = "0.17.2"
ndarray-npy = "0.10.0"

[build-dependencies]
sha2 = { version = "0.10", optional = true }
ureq = { version = "3", optional = true }
zip = { version = "6", default-features = false, features = ["deflate"], optional = true }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "slant_path"
harness = false
